<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.features.MainActivity" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/username" />
	<EditText
	    android:id="@+id/password"
	    android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/password" />
	<Button 
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
	    android:hint="@string/login"
	    android:onClick="authenticate"
	    />
</LinearLayout>
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/name" />
    <EditText
        android:id="@id/username"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/username" />
	<EditText
	    android:id="@+id/phoneno"
	    android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/phone" />
	<EditText
	    android:id="@+id/emailid"
	    android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/emailid" />
	<EditText
	    android:id="@id/password"
	    android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/password" />
	<EditText
	    android:id="@+id/retype"
	    android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/retype" />
	<Button 
	   	android:layout_width="match_parent"
        android:layout_height="match_parent"
	    android:hint="@string/register"
	    android:onClick="register"
	    />
</LinearLayout>

</LinearLayout>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >
    <TextView 
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="You have a error"/>
</LinearLayout>
</LinearLayout>
    
